--- a/ZhihaoXu_APSIPAasc_2015.bib
+++ b/ZhihaoXu_APSIPAasc_2015.bib
@@ -1,11 +1,9 @@
 @inproceedings{ZhihaoXu_APSIPAasc_2015,
 Author = {Z. Xu and Y. Guo and J. Guo and X. Kong},
 Title = {Hybrid Dictionary Learning for JPEG Steganalysis},
-booktitle = {Proc. Asia-Pacific Signal and Inform. Process. Assoc. Annu. Summit and Conf. (APSIPA ASC)},
+booktitle = {Proc. Asia-Pacific Signal Inform. Process. Assoc. Annu. Summit Conf. (APSIPA ASC)},
 address = {Hong Kong, China},
 Pages = {711-714},
 month = {Dec.},
 Year = {2015}
-}
-
-  
+}  
